Add export whitelisting argument to JVM options in Jib