@@ -374,7 +374,7 @@
             <container>
               <environment>
                 <PATHLING_VERSION>${project.version}</PATHLING_VERSION>
-                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC</JAVA_TOOL_OPTIONS>
+                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC --add-exports java.base/sun.nio.ch=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
               </environment>
               <labels>
                 <copyright>Copyright © 2018-2023, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230. Licensed under the CSIRO Open Source Software Licence Agreement.</copyright>
